objects/Commitment_Term__c.object
<CustomObject>
    <fields>
        <fullName>Building_UUID__c</fullName>
        <description>This stores the uuid of the building for which commitment was made this value is received in the contract event payload</description>
        <externalId>true</externalId>
        <label>Building UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This relates the building for which commitment was made as commitment are according to  the building</description>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipName>commitment_Terms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commitment_End_Date__c</fullName>
        <description>This field is populated from contract event and it represents the end date of the commitment</description>
        <label>Commitment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Start_Date__c</fullName>
        <description>The start date for the commitment is stored in this field it is populated with value that comes in payload</description>
        <label>Commitment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Term_in_Months__c</fullName>
        <description>The number of months from the start date for which the commitment is made is populated in this field from contract event payload</description>
        <label>Commitment Term in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Relates the opportunity specifying the commitment for a particular opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>commitment_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>This object will store all the commitments that are passed in the contract event JIRA: CSI-525</description>
    <label>Commitment Term</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Commitment Term ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitment Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>